SERVER-97015: ASIOReactorTimer Set After Shutdown Returns ShutdownInProgress Error (#37746)

Co-authored-by: Erin McNulty <erin.mcnulty@mongodb.com>
GitOrigin-RevId: 21a18c4adef5bcd9c53984a6046d0e304fbb1da1